test/expected/explain_al4_cw3.out
explain _Alignas(4) char c : 3
        ^
9: error: bit fields can not be aligned
